UI Tweaks to make the settings menus cleaner and easier to use.
Added a static method to ChroType to get a certain enum constant by
number.

Refactored ChroBars classes (ChroBar, ChroBar2D/3D) to make them cleaner
and simpler. Minimized code redundancy and made the initNormals method
in ChroBar3D more efficient by using ArrayLists instead of LinkedLists,
and cached objects used solely for class object access to reduce the
amount of object instantiation.

Refactored ChroBarsSettings to use HashMaps instead of ArrayLists. More
memory-intensive but better-performing.

Refactored Vec3D constructor that takes a list to make it more generic.

Added a small javadoc comment in ChroBarsSettingsActivity.